<resources>
    <string name="app_name">MyHome</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_register">Don\'t have account? <b><u>Register</u></b></string>
    <string name="already_have_account">Already have account? <b><u>Sign in</u></b></string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="edit_profile">Edit profile</string>
    <string name="advantages_label">Advantages</string>
    <string name="add_apartment">Add apartment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="enter_your_iban">Enter your IBAN to get payments</string>
    <string name="select_type">Select type:</string>
    <string name="private_house">Private house</string>
    <string name="flat">Flat</string>
    <string name="hotel">Hotel</string>
    <string name="add_some_photos">Add some photos (max 10):</string>
    <string name="long_press_to_choose_cover">*Long press to choose cover photo</string>
    <string name="select_advantages">Select advantages in your apartment</string>
    <string name="free_wifi">Free Wi-Fi</string>
    <string name="free_parking">Free parking</string>
    <string name="breakfest">Breakfest</string>
    <string name="bar">Bar</string>
    <string name="restaurant">Restaurant</string>
    <string name="transfer">Transfer</string>
    <string name="service">Service</string>
    <string name="non_smoking_rooms">Non-smoking rooms</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="facilities_for_disabled">Facilities for disabled guests</string>
    <string name="continue_text">Continue</string>
    <string name="last_step">Last step</string>
    <string name="preview">Preview:</string>
    <string name="how_many_single">How many single beds?</string>
    <string name="how_many_double_beds">How many double beds?</string>
    <string name="how_many_bunks">How many bunks?</string>
    <string name="price_for_day">Price for day</string>
    <string name="finish">Finish</string>
    <string name="room_counter">Room 1/10</string>
    <string name="title_add_room">Title</string>
    <string name="next_room">Next room</string>
    <string name="added_apartments">Added apartments</string>
    <string name="content_description">Content description</string>
    <string name="supporting_text">supporting text</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="reviews">Reviews</string>
    <string name="confirm_info">Confirm information</string>
    <string name="selected_date">Selected date:</string>
    <string name="selected_persons">Selected persons:</string>
    <string name="choose_room">Choose room</string>
    <string name="use_filters">Use filers</string>
    <string name="sort_by">Sort by</string>
    <string name="change_picture">Change picture</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="conrim_privacy_policy">I read and confirm your Privacy Policy</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="english" translatable="false">English</string>
    <string name="my_orders">My orders</string>
    <string name="info">Info</string>
    <string name="content">Content</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="log_out">Log out</string>
    <string name="confrim_booking">Confirm booking</string>
    <string name="customer_info">Customer info</string>
    <string name="total_price">Total: 500 USD</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card number</string>
    <string name="date">Date</string>
    <string name="cvv" translatable="false">CVV2</string>
    <string name="success_payment">Your payment was success! You can see your bookings in Profile tab. Thank for choose MyHome!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="create_a_password">Create a password</string>
    <string name="repeat_passowrd">Repeat your password</string>
    <string name="create_account">Create account</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="from_price_per_day">From 125$ / day</string>
    <string name="details">Details</string>
    <string name="room_price_per_day">125 USD/day</string>
    <string name="book">Book</string>
    <string name="set_up_your_profile_text">Set up your profile</string>
    <string name="chip_people">%s adult - %s child</string>
    <string name="date_chip">Any date</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_error">Password length must be 6+ symb from English alphabet</string>
    <string name="something_went_wrong">Something went wrong, try again later...</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="select_image">Select image</string>
    <string name="search_hint">Search</string>
    <string name="where_are_you_going_hint">Where are you going?</string>
    <string name="see_rooms">See rooms</string>
    <string name="select_dates">Select dates</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="menu_map">Map</string>
    <string name="price_from">From %s %s</string>
    <string name="count_of_children">Count of children</string>
    <string name="count_of_adults">Count of adults</string>
    <string name="save">Save</string>
    <string name="any_people">Any people</string>
    <string name="rating_param">Rating</string>
    <string name="price_param">Price</string>
</resources>