<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:maxLines="1"
            android:text="@string/room_counter"
            android:textAppearance="?attr/textAppearanceHeadline6" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/add_photo"/>

    <LinearLayout
        android:id="@+id/linear_layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_add_room"
            android:minHeight="48dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/single_bed_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many_single"
            android:minHeight="48dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/single_bed_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/double_bed_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many_double_beds"
            android:minHeight="48dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/bed_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bunk_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_many_bunks"
            android:minHeight="48dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/bunk_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_for_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_for_day"
            android:minHeight="48dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/payments_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_info" />

</androidx.constraintlayout.widget.ConstraintLayout>